# echo-scribe

./: .gitignore  .release-please-manifest.json  BUILD_PLAN.md  CLAUDE.md  CODE_STRUCTURE.md  PHASE-2-CONTEXT.md  PHASE-3-CONTEXT.md  PHASE-4-CONTEXT.md  PHASE-5-CONTEXT.md  Package.resolved  Package.swift  README.md  appcast.xml  biome.json  bunfig.toml  index.html  install.sh  package.json  playwright.config.ts  project.yml  reinstall.command  release-please-config.json  tsconfig.json  vite.config.ts
.claude/: launch.json  settings.json
.github/workflows/: installer.yml  onboarding-e2e.yml  release-please.yml  release.yml  windows.yml
.husky/: pre-push
EchoScribe.xcodeproj/: project.pbxproj
EchoScribe/App/: AppState.swift  EchoScribeApp.swift  MenuBarManager.swift
EchoScribe/Database/: AppDatabase.swift
EchoScribe/Design/: DesignTokens.swift  ViewModifiers.swift
EchoScribe/EchoScribe.xcdatamodeld/: .xccurrentversion
EchoScribe/Models/: CDNote.swift  CDNoteTask.swift  CDProject.swift  CDTag.swift  Note.swift  NoteTag.swift  NoteTask.swift  NoteWithDetails.swift  Project.swift  ProjectWithCount.swift  Tag.swift
EchoScribe/Persistence/: PersistenceController.swift
EchoScribe/Resources/: Info.plist
EchoScribe/Services/: AudioDeviceManager.swift  CapsLockShortcutService.swift  ClipboardPasteService.swift  DoublePressShortcutService.swift  RecordingCoordinator.swift  ShortcutConflictDetector.swift  SpotlightIndexer.swift
EchoScribe/Utilities/: ColorExtension.swift  Constants.swift  SystemShortcutNames.swift
EchoScribe/ViewModels/: DictationViewModel.swift  FeedViewModel.swift  ProjectsViewModel.swift  RecordingViewModel.swift  SettingsViewModel.swift
EchoScribeTests/Helpers/: TestHelpers.swift
EchoScribeTests/Models/: NoteWithDetailsTests.swift
EchoScribeTests/Persistence/: PersistenceIntegrationTests.swift
EchoScribeTests/Services/: NoteAnalysisTests.swift  PromptTemplatesTests.swift  SilenceRemoverTests.swift
EchoScribeTests/ViewModels/: DictationViewModelTests.swift  FeedViewModelTests.swift  NoteDeletionTests.swift  RecordingViewModelTests.swift
EchoScribeUITests/: AppLaunchUITests.swift
Scripts/: build-release.sh  build.ts  create-dmg.sh  dev.ts
apps/core-runtime/: package.json  tsconfig.json
apps/mac/: project.yml
dashboard-design-variations/: 01-command-center.html  02-light-studio.html  03-split-focus.html  04-ops-console.html  05-warm-notebook.html  06-macos-compact-split.html  07-macos-dark-inspector.html  08-macos-clean-utility.html  index.html
docs/: WINDOWS.md  index.html
e2e/: mock.ts  onboarding.spec.ts  stats.spec.ts
scripts/: build-calmatch.sh  build-from-source.sh  build-screenrec.sh  build-syscap.sh  setup-codesign.command  sign-macos-bundle.sh  smoke-test.sh  test-installer.sh
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  embed-models.json  llm-models.json  models.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/.claude/: launch.json
src-tauri/binaries/: echo-scribe-calmatch-aarch64-apple-darwin  echo-scribe-screenrec-aarch64-apple-darwin  echo-scribe-syscap-aarch64-apple-darwin
src-tauri/calmatch/: Package.swift  main.swift
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/screenrec/: InputEvents.swift  Package.swift  Webcam.swift  main.swift
src-tauri/src/: classifier.rs  commands.rs  coordinator.rs  event_log.rs  lib.rs  main.rs  overlay.rs  permissions.rs  platform.rs  project_tagger.rs  settings.rs  smoke.rs  temporal.rs  updater.rs
src-tauri/src/asr/: captions.rs  downloader.rs  mod.rs  parakeet.rs  pipeline.rs  postprocess.rs  registry.rs
src-tauri/src/audio/: devices.rs  feedback.rs  mod.rs  mute.rs  recorder.rs  resample.rs  vad.rs
src-tauri/src/calendar/: mod.rs
src-tauri/src/chat_memory/: chunk.rs  indexer.rs  mod.rs  source.rs
src-tauri/src/daily_summary/: collector.rs  generator.rs  mod.rs  scheduler.rs
src-tauri/src/db/: chat.rs  daily_summaries.rs  embeddings.rs  events.rs  guide_templates.rs  items.rs  meeting_guide_runs.rs  meetings.rs  mod.rs  project_tag_jobs.rs  projects.rs  recordings.rs  schema.rs  search.rs  stats.rs  tasks.rs
src-tauri/src/denoise/: mod.rs
src-tauri/src/embed/: catalog.rs  engine.rs  math.rs  mod.rs
src-tauri/src/export/: activity.rs  mod.rs
src-tauri/src/input/: binding.rs  focus.rs  hotkeys.rs  mod.rs  paste.rs  trigger.rs
src-tauri/src/llm/: action_launcher.rs  downloader.rs  edit.rs  engine.rs  mod.rs  prompt.rs  rag.rs  registry.rs
src-tauri/src/meeting/: detector.rs  grammar.rs  guidance.rs  guide_review.rs  mod.rs  pipeline.rs  recorder.rs  stitch.rs  synthesizer.rs  syscap.rs  url_allowlist.rs
src-tauri/src/screenrec/: drive.rs  mod.rs
src-tauri/src/ui/: dock.rs  menu.rs  tray.rs
src-tauri/src/util/: rss.rs
src-tauri/syscap/: Package.swift  main.swift
src-tauri/tests/: action_launcher_tests.rs  daily_summary_e2e.rs  meeting_pipeline.rs
src/area-picker/: AreaPicker.tsx  index.html  main.tsx
src/camera-preview/: CameraPreview.tsx  index.html  main.tsx
src/components/: ActivityPanel.tsx  ActivityPanelContext.tsx  DictationButton.tsx  GuideTemplateManager.tsx  GuideTrendView.tsx  HotkeyRebinder.tsx  ItemCard.tsx  ItemDetailPanel.tsx  LlmModelPicker.tsx  Markdown.tsx  MeetingCard.tsx  PermissionRow.tsx  PermissionWarningBanner.tsx  PermissionsSection.tsx  ProjectEditor.tsx  ProjectManager.tsx  RecordingActionsMenu.tsx  RecordingCard.tsx  RecordingDetailPanel.tsx  ScreenRecordButton.tsx  SidebarRecordButton.tsx  SpeechModelPicker.tsx  StartAtLoginToggle.tsx  ThemeToggle.tsx  (+6 more)
tests/: areaPicker.test.ts  autoZoom.test.ts  capabilities.test.ts  compositor.test.ts  countdown.test.ts  editorDefaults.test.ts  editorProject.test.ts  feed.test.ts  formatTemplates.test.ts  guideReview.test.ts  keycodes.test.ts  meetingDisplay.test.ts  meetingRecorder.test.ts  meetingStatus.test.ts  permissionsUi.test.ts  renderClamp.test.ts  renderEditList.test.ts  renderGif.test.ts  renderTrim.test.ts  resolveZoomBlocks.test.ts  webcamPick.test.ts
(+186 files in other folders)
