[package]
name = "echo-scribe"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "echo_scribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Use rustdesk's maintained fork of rdev. Upstream rdev 0.5.x calls
# TSMGetInputSourceProperty from the event tap thread on macOS, which crashes
# on macOS Sonoma+ (TSM enforces main-thread-only). The rustdesk fork wraps the
# TIS lookup in a `dispatch::Queue::main().exec_sync(..)` call, so it's safe.
# Pinned to a specific commit for reproducibility.
#
# We do NOT enable the `serialize` feature: this fork's `Event` struct gained a
# `unicode: Option<UnicodeInfo>` field whose `UnicodeInfo` doesn't derive
# `Deserialize`, breaking the feature. We don't (de)serialize rdev's `Event`
# anyway — only `Key`, which we wrap in our own `SerKey` and (de)serialize via a
# string mapping (see `src/input/binding.rs`).
rdev = { git = "https://github.com/rustdesk-org/rdev", rev = "a90dbe1172f8832f54c97c62e823c5a34af5fdfe" }
cpal = "0.15"
enigo = "0.2"
arboard = "3"
tauri-plugin-store = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
objc2-av-foundation = { version = "0.3", features = ["AVCaptureDevice", "AVMediaFormat", "block2"] }
objc2-application-services = { version = "0.3", features = ["AXUIElement"] }
objc2-core-foundation = { version = "0.3", features = ["CFBase", "CFDictionary", "CFNumber", "CFString"] }
block2 = "0.6"

