[package]
name = "echo-scribe"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "echo_scribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Use rustdesk's maintained fork of rdev. Upstream rdev 0.5.x calls
# TSMGetInputSourceProperty from the event tap thread on macOS, which crashes
# on macOS Sonoma+ (TSM enforces main-thread-only). The rustdesk fork wraps the
# TIS lookup in a `dispatch::Queue::main().exec_sync(..)` call, so it's safe.
# Pinned to a specific commit for reproducibility.
#
# We do NOT enable the `serialize` feature: this fork's `Event` struct gained a
# `unicode: Option<UnicodeInfo>` field whose `UnicodeInfo` doesn't derive
# `Deserialize`, breaking the feature. We don't (de)serialize rdev's `Event`
# anyway — only `Key`, which we wrap in our own `SerKey` and (de)serialize via a
# string mapping (see `src/input/binding.rs`).
rdev = { git = "https://github.com/rustdesk-org/rdev", rev = "a90dbe1172f8832f54c97c62e823c5a34af5fdfe" }
cpal = "0.15"
enigo = "0.2"
arboard = "3"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
# ASR / Parakeet via ONNX Runtime. CPU-only — `ort-coreml` was dropped after
# logs showed CoreML accepted only 15/39 encoder ops and 4/35 decoder ops, and
# spent ~50s on first-run graph compilation while still running most of the
# model on CPU through partition boundaries. Handy makes the same choice.
transcribe-rs = { version = "0.3", default-features = false, features = ["onnx"] }
# Audio resampling to 16 kHz mono for Parakeet
rubato = "0.16"
# Model downloader: small, rustls-only HTTP client + streaming + hashing
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
sha2 = "0.10"
dirs = "5"
futures-util = "0.3"
# Persistence: bundled SQLite (so we have FTS5 on every macOS) + ULID for IDs.
rusqlite = { version = "0.32", features = ["bundled"] }
ulid = "1"
# URL parsing for the meeting URL allowlist (browser-based meeting detection).
url = "2"
# Local LLM (llama.cpp) bindings. Default features (openmp,
# android-shared-stdcxx) are off; we enable Metal explicitly for Apple Silicon
# GPU offload. Pinned to 0.1.146 (current latest).
llama-cpp-2 = { version = "0.1.146", default-features = false, features = ["metal"] }
# encoding_rs is needed for `LlamaModel::token_to_piece` (it takes a
# `&mut encoding_rs::Decoder` to handle streaming UTF-8 decoding).
encoding_rs = "0.8"
# Audio feedback playback. Lightweight, default features off (we don't need
# symphonia's huge codec set — only the bundled WAV decoder).
rodio = { version = "0.20", default-features = false, features = ["wav"] }
# Rolling daily log file appender for crash diagnostics.
tracing-appender = "0.2"
# Edit-distance for fuzzy custom-word correction in transcript postprocessing.
strsim = "0.11"
# `_exit` to bypass C++ static destructors on quit (llama.cpp Metal cleanup
# crashes when an inference is still in flight at shutdown).
libc = "0.2"
uuid = { version = "1.23.1", features = ["v4"] }
chrono = "0.4.44"
coreaudio-sys = "0.2.17"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication", "NSWindow", "NSResponder", "NSWorkspace"] }
objc2-av-foundation = { version = "0.3", features = ["AVCaptureDevice", "AVMediaFormat", "block2"] }
objc2-application-services = { version = "0.3", features = ["AXUIElement", "AXError"] }
objc2-core-foundation = { version = "0.3", features = ["CFBase", "CFDictionary", "CFNumber", "CFString"] }
block2 = "0.6"
# CGEventTap-based hotkey listener (replaces rdev::listen). The tap can SWALLOW
# events that match the bound hotkey so they never reach the focused app — rdev
# is observe-only and cannot do that.
core-graphics = "0.24"
core-foundation = "0.10"

